# Cmake_3.17.5_Learning

./: .gitignore  CMakeLists.txt  README.md
Step1/: CMakeLists.txt
Step1/config/: step1_config.h.in
Step1/src/: step1.cc
Step2/: CMakeLists.txt
Step2/MathFunctions/: CMakeLists.txt  MathFunction.h  mySqrt.cc
Step2/config/: step2_config.h.in
Step2/src/: step2.cc
